# nmdsuite

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  NMDSuite.md  README.md  deploy-local.sh  docker-compose.local.yml  docker-compose.yml  manage.py  pyproject.toml
admin_module/: apps.py  backup_service.py  email_service.py  fixstation_service.py  forms.py  models.py  notifications.py  services.py  urls.py  views.py
core/: adif_export.py  admin.py  apps.py  audit.py  context_processors.py  models.py  participant_list_csv.py  participant_list_pdf.py  picker.py
nmdsuite/: asgi.py  email_backends.py  settings.py  urls.py  wsgi.py
portal/: emails.py  forms.py  models.py  qso_service.py  qso_upload.py  qso_validators.py  report_service.py  station_service.py  submit_service.py  urls.py  views.py
public/: apps.py  ranking_pdf.py  ranking_service.py  urls.py  views.py
registration/: callsigns.py  constants.py  coords.py  emails.py  forms.py  models.py  services.py  swisstopo.py  urls.py  views.py
scoring/: dupes.py  invalid_callsigns.py  models.py  overrides.py  pairing.py  points.py  suspected.py  text_match.py  totals.py  urls.py  views.py
templates/: _language_switcher.html  base.html  placeholder.html
tests/: conftest.py  test_adif_export.py  test_admin_backup.py  test_admin_bulk_email.py  test_admin_fixstation_review.py  test_admin_log_reminder.py  test_admin_module.py  test_admin_on_behalf.py  test_admin_on_behalf_b.py  test_admin_state_machine.py  test_callsigns.py  test_coords.py  test_email_redirect.py  test_embed_mode.py  test_export_legacy.py  test_log_dupe_detection.py  test_log_entry.py  test_login.py  test_map.py  test_participant_list_csv.py  test_participant_list_pdf.py  test_portal.py  test_portal_scoring.py  test_public_ranking.py  test_public_registrations.py  test_qso_upload.py  test_ranking_pdf.py  test_registration.py  test_report.py  test_scoring_command.py  test_scoring_dupes.py  test_scoring_import_logs.py  (+13 more)
(+84 files in other folders)
