[project]
name = "nmdsuite"
version = "0.1.0"
description = "USKA National Mountain Day contest suite (registration, log submission, scoring, administration)."
requires-python = ">=3.12"
dependencies = [
    "Django>=5.0,<5.2",
    "argon2-cffi>=23.1",
    "django-axes>=6.4",
    "pyproj>=3.6",
    "Pillow>=10.0",
    "gunicorn>=21.2",
    "whitenoise>=6.6",
    "python-dotenv>=1.0",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "factory-boy>=3.3",
    "ruff>=0.4",
    "black>=24.3",
    "mypy>=1.9",
    "django-stubs>=4.2",
    "playwright>=1.42",
    "pytest-playwright>=0.4",
    "pypdf>=4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# This project is a Django application, not a redistributable library.
# We only declare packages so `pip install -e .` works for dependency resolution;
# `reference/`, `templates/`, `static/`, `locale/`, `tests/` are intentionally
# excluded (they're not importable Python packages).
packages = ["nmdsuite", "core", "registration", "portal", "scoring", "admin_module"]

[tool.ruff]
line-length = 110
target-version = "py312"
exclude = ["reference", "migrations", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py312"]
extend-exclude = "reference|migrations"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = ["reference/", "migrations/"]

[tool.django-stubs]
django_settings_module = "nmdsuite.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "nmdsuite.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q --strict-markers"
testpaths = ["tests", "core", "registration", "portal", "scoring", "admin_module"]
